--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -229,7 +229,9 @@
               <img
                 id="match-img"
                 src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg"
-                alt=""
+                class="img-responsive"
+                style="width:300px;height:300px;"
+                alt="Image"
               />
             </div>
             <div class="modal-footer">
